@@ -5586,3 +5586,6 @@ v0.92.0.11:
   - Fix metadata display issue on the status screens which could lead to metadata being displayed twice.
   - Make the town status screen prettier, with a new line for PVP, open and peaceful statuses.
   - Fix /n list and /t list permission nodes.
+  - Fix slimefun unresearched items being able to bypass switch protections.
+    - Re-closes #4065.
+    - Closes https://github.com/Slimefun/Slimefun4/issues/2641
